[gd_scene load_steps=6 format=3 uid="uid://5dpuu2l72yhg"]

[ext_resource type="Theme" uid="uid://c38cnaco26erq" path="res://GUI/default_theme.tres" id="1_g18nf"]
[ext_resource type="Script" path="res://global/settings_GUI.gd" id="2_f1d4f"]
[ext_resource type="Texture2D" uid="uid://dnbnxosef5r58" path="res://res/sprites/citymap.png" id="3_2gmg0"]
[ext_resource type="Script" path="res://volume_slider.gd" id="3_n24n2"]
[ext_resource type="PackedScene" uid="uid://ctqd8vvfeado1" path="res://GUI/avatar_selection_GUI.tscn" id="4_s3tp7"]

[node name="SettingsGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_g18nf")
script = ExtResource("2_f1d4f")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_2gmg0")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.305882, 0.305882, 0.305882, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_top = 150.0
offset_right = 575.0
offset_bottom = 954.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(480, 100)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[center][color=white] Einstellungen[/color][/center]"

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/CenterContainer2"]
custom_minimum_size = Vector2(294, 0)
layout_mode = 2
theme_override_constants/separation = 50

[node name="Fortsetzen" type="Button" parent="CanvasLayer/VBoxContainer/CenterContainer2/Buttons" groups=["Button"]]
custom_minimum_size = Vector2(356, 0)
layout_mode = 2
text = "Speichern & Zur체ck
"

[node name="SelectAvatar" type="Button" parent="CanvasLayer/VBoxContainer/CenterContainer2/Buttons" groups=["Button"]]
layout_mode = 2
text = "Charakter ausw채hlen"

[node name="Sound" type="Button" parent="CanvasLayer/VBoxContainer/CenterContainer2/Buttons" groups=["Button"]]
custom_minimum_size = Vector2(356, 0)
layout_mode = 2
text = "Sound"

[node name="FontChange" type="CheckButton" parent="CanvasLayer/VBoxContainer/CenterContainer2/Buttons"]
layout_mode = 2
text = "Dyslexic Font"

[node name="Reset" type="Button" parent="CanvasLayer/VBoxContainer/CenterContainer2/Buttons" groups=["Button"]]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.776471, 0, 0, 1)
text = "Spiel zur체cksetzen"

[node name="Sounds" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/CenterContainer2"]
visible = false
layout_mode = 2

[node name="MasterLabel" type="Label" parent="CanvasLayer/VBoxContainer/CenterContainer2/Sounds"]
layout_mode = 2
text = "Master"

[node name="Master" type="HSlider" parent="CanvasLayer/VBoxContainer/CenterContainer2/Sounds"]
layout_mode = 2
script = ExtResource("3_n24n2")
bus_name = "Master"

[node name="BGMusicLabel" type="Label" parent="CanvasLayer/VBoxContainer/CenterContainer2/Sounds"]
layout_mode = 2
text = "Hintergrund Musik"

[node name="Music" type="HSlider" parent="CanvasLayer/VBoxContainer/CenterContainer2/Sounds"]
layout_mode = 2
script = ExtResource("3_n24n2")
bus_name = "Musik"

[node name="SFXLabel" type="Label" parent="CanvasLayer/VBoxContainer/CenterContainer2/Sounds"]
layout_mode = 2
text = "Sound Effekte"

[node name="SFX" type="HSlider" parent="CanvasLayer/VBoxContainer/CenterContainer2/Sounds"]
layout_mode = 2
script = ExtResource("3_n24n2")
bus_name = "SFX"

[node name="Back" type="Button" parent="CanvasLayer/VBoxContainer/CenterContainer2/Sounds" groups=["Button"]]
custom_minimum_size = Vector2(356, 0)
layout_mode = 2
text = "Speichern & Zur체ck
"

[node name="AvatarSelectionGUI" parent="." instance=ExtResource("4_s3tp7")]
visible = false
layout_mode = 1

[connection signal="pressed" from="CanvasLayer/VBoxContainer/CenterContainer2/Buttons/Fortsetzen" to="." method="_on_fortsetzen_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/CenterContainer2/Buttons/SelectAvatar" to="." method="_on_select_avatar_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/CenterContainer2/Buttons/Sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/CenterContainer2/Buttons/FontChange" to="." method="_on_font_change_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/CenterContainer2/Buttons/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/CenterContainer2/Sounds/Back" to="." method="_on_back_pressed"]
[connection signal="closed" from="AvatarSelectionGUI" to="." method="_on_avatar_selection_gui_closed"]
